Bug 1567355 - Admit that exiting fullscreen can fail on macOS. r=smaug a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D47525